# sdl2dgame

./: .gitignore  CMakeLists.txt  README.md
res/: front.license
src/: cleanup.h  game.cpp  game.h  main.cpp  sdl++.cpp  sdl++.h
